--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 asgiref==3.2.7
+certifi==2020.4.5.1
+chardet==3.0.4
 Django==3.0.6
 django-ckeditor==5.9.0
 django-js-asset==1.2.2
+django-recaptcha3==0.2.0
+idna==2.9
 Pillow==7.1.2
 pytz==2020.1
+requests==2.23.0
 sqlparse==0.3.1
+urllib3==1.25.9
